# ia-for-gamedev

./: .gitignore  README.md
GOAP/: CMakeLists.txt
GOAP/GOAP/: GOAP.sln  README.md
GOAP/GOAP/GOAP/: Actions.cpp  Actions.h  Condition.h  Effect.cpp  Effect.h  GOAP.cpp  GOAP.vcxproj  GOAP.vcxproj.filters  GoapSolver.cpp  GoapSolver.h  Precondition.cpp  Precondition.h  World.cpp  World.h  main.cpp
StatesMachines/StatesMachines/: GameState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StatesMachines.cpp  StatesMachines.sln  StatesMachines.vcxproj  StatesMachines.vcxproj.filters  Transition.cpp  Transition.h  main.cpp
StatesMachines/StatesMachines17/StateMachine17/: StateMachine17.sln
StatesMachines/StatesMachines17/StateMachine17/StateMachine17/: GameState.cpp  GameState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachine17.cpp  StateMachine17.vcxproj  StateMachine17.vcxproj.filters  Transition.cpp  Transition.h  main.cpp
